Update Blob Storage and DB

--- a/UploadToServer/UploadToServer/MainPage.xaml
+++ b/UploadToServer/UploadToServer/MainPage.xaml
@@ -47,7 +47,7 @@
         BackgroundColor="Purple"
         TextColor="White"
         FontSize="40"
-        Clicked="UploadFile2_Clicked"/>
+        Clicked="UploadFile_Clicked"/>
 
     <Label x:Name="RemotePathLabel"
            FontSize="20"
