--- a/UploadToServer/UploadToServer/MainPage.xaml
+++ b/UploadToServer/UploadToServer/MainPage.xaml
@@ -4,55 +4,16 @@
              xmlns:local="clr-namespace:UploadToServer"
              x:Class="UploadToServer.MainPage"
              BackgroundColor="White">
-
-    <StackLayout Orientation="Vertical">
-
-        <Label Text="Upload File to Server"
-           HorizontalOptions="Center"
-           TextColor="Black"
-           FontSize="36"/>
-
-        <!--<Button Text="Pick Photo"
-            BackgroundColor="Teal"
-            TextColor="White"
-            FontSize="40"
-            Clicked="PickPhoto_Clicked"/>-->
-
-    <Button Text="Take Photo"
-            BackgroundColor="Navy"
-            TextColor="White"
-            FontSize="40"
-            Clicked="TakePhoto_Clicked"/>
-        
-    <Button Text="Take Video"
-        BackgroundColor="Teal"
-        TextColor="White"
-        FontSize="40"
-        Clicked="TakeVideo_Clicked"/>
-
-        <Image x:Name="FileImage"
-           HeightRequest="399"/>
-
-    <Label x:Name="LocalPathLabel"
-           TextColor="Black"
-           FontSize="18"/>
-
-    <!--<Button Text="Take Video"
-        BackgroundColor="Navy"
-        TextColor="White"
-        FontSize="40"
-        Clicked="TakeVideo_Clicked"/>-->
-
-    <Button Text="Upload Photo"
-        BackgroundColor="Purple"
-        TextColor="White"
-        FontSize="40"
-        Clicked="UploadFile_Clicked"/>
-
-    <Label x:Name="RemotePathLabel"
-           FontSize="20"
-           TextColor="Black"/>
-
-  </StackLayout>
-  
+    
+    <ScrollView>
+        <StackLayout Spacing="10" Padding="10, 5, 10, 5">
+            <Label Text="Upload File to Server" HorizontalOptions="Center" TextColor="Black" FontSize="36"/>
+            <Button x:Name="takePhoto" Text="Take Photo" BackgroundColor="Navy" TextColor="White" Clicked="TakePhoto_Clicked"/>
+            <Button x:Name="takeVideo" Text="Take Video" BackgroundColor="Teal" TextColor="White" Clicked="TakeVideo_Clicked"/>
+            <Image x:Name="FileImage" HeightRequest="360"/>
+            <Label x:Name="lblMessage" TextColor="Black" FontSize="14" IsVisible="True"/>
+            <Button x:Name="uploaPhoto" Text="Upload Photo" BackgroundColor="Purple" TextColor="White" Clicked="UploadFile_Clicked"/>
+            <!--<Label x:Name="RemotePathLabel" FontSize="20" TextColor="Black"/>-->
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
